--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "framer-motion": "^12.7.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
